<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, HolidayAppActivity!</string>
    <string name="app_name">My School Holidays</string>
    <string name="label_school_name">Wilsden primary school</string>
    <string name="label_enter_school_name">Start typing your school name and choose one from the suggestions that you will see.</string>
    <string name="label_save">Save</string>
    <string name="error_message">Error</string>
    <string name="widget_help_text">To get started simply search for your school. Once you have found your school visit your devices desktop, press and hold your finger on a blank part of the screen.  Select Widget, Select My School Holidays.</string>
    <string name="holiday_app_desc">The "My School Holidays" widget.\n\nGet a countdown widget to your next school holiday date and easily access your school calendar.</string>
    <string name="visit_website">Visit Website</string>
    <string name="lab_go">Go</string>
    <string name="lab_you_have_chosen">You\'ve chosen </string>
    <string name="lab_school_name">No school selected</string>
    <string name="lab_school_confirmation">        <![CDATA[<b>To add the widget to your homescreen:</b><br/><br/>1. Press and hold your finger on your desktop, select Widgets.<br/><br/>2. Select My School Holidays from the list of available widgets and click OK.<br/><br/>3. Place the Widget wherever you want on your screen.<br/><br/>]]>
    </string>
    <string name="lab_exit">Exit</string>
    <string name="lab_country_fetch_error">Could not get school url. Please select your school again.</string>
    <string name="lab_country">Country: </string>
    <string name="lab_feedback_message">If you like My School Holidays Widget and are finding it useful please take a moment to rate this app.\n\nIf you are having problems with this app or have a suggestion on how we can improve it please provide us with some feedback by pressing the button below. We take feedback very seriously and aim to respond within 48 hours.</string>
    <string name="lab_rate">Rate</string>
    <string name="lab_feedback">Feedback</string>
    <string name="lab_done">Done</string>
    <string name="lab_no_market">You cannot rate now since Google Play is not installed.</string>
    <string name="lab_no_email_client">You need to setup an email client to be able to send feedback to us.</string>
    <string name="lab_help">\?</string>
    <string name="lab_feedback_bold">Feedback</string>
    <string name="lab_email_info">By providing us with feedback via email the following information will be sent to us:\n\n- Device Make/Model\n- Version of Android installed\n- Version of My School Holidays Widget\n\nIn addition to this as the email will be sent via your registered google account we will be able to contact you with regards any bugs or problems you may be experiencing.\n\nContact information will NOT be disclosed to any other third partys or used for the purposes of soliciting.\n\nDo you concent to sending us feedback?</string>
	<string name="lab_yes">Yes</string>
	<string name="lab_no_thanks">No Thanks</string>
	<string name="lab_device_info">Device info</string>
	<string name="lab_device_make">Device make/model</string>
	<string name="lab_android_version">Android version</string>
	<string name="lab_mshw_version">My School Holidays Widget version</string>
	<string name="lab_school_choosen">School selected</string>
	<string name="lab_your_problem">Please enter feedback below:\n</string>
	<string name="lab_back">Back</string>
</resources>