<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="2dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dip"
            android:layout_marginRight="2dip"
            android:layout_weight="1"
            android:text="@string/label_enter_school_name"
            android:textSize="12sp"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:text="@string/lab_help" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextSchoolName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dip"
        android:layout_marginRight="2dip"
        android:layout_marginTop="5dip"
        android:hint="@string/label_school_name"
        android:singleLine="true" >

        <requestFocus>
        </requestFocus>
    </EditText>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:id="@+id/linearLyaout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:singleLine="true"
            android:text="TextView"
            android:textSize="14dip"
            android:textStyle="bold" >
        </TextView>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="2dip"
            android:text="@string/label_save"
            android:visibility="invisible" >
        </Button>
    </LinearLayout>

</LinearLayout>